@@ -73,7 +73,7 @@ function __construct($_config = array()) {
 		'cookiedomain'		=> '',
 		'cookiepath'		=> '/',
 		'cookiename'		=> 'sess',
-		'cookiesecure'		=> 1,
+		'cookiesecure'		=> host_secure() ? 1 : 0,	// only set if host is using HTTPS
 		'cookiecompress'	=> TRUE,
 		'cookieencode'		=> TRUE,
 		'login_callback_func'	=> '',
