@@ -45,6 +45,7 @@ Version 0.0.4b (in progress)
 * [Fixed] Problem with language class attempting to load multiple times.
 * [Fixed] Broken Smarty debugging—thanks Rosenstein.
 * [Fixed] Annoying ugly links urls.
+* [Changed] Cookies are now only set as secure if the host is using HTTPS.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
